# MiniSearch

./: .gitignore  CMakeLists.txt  README.md
benchmark/: CMakeLists.txt  benchmark_search.cpp
src/: main.cpp
src/file_reader/: CMakeLists.txt  file_reader.cpp
src/query_engine/: CMakeLists.txt  query.cpp  query.h  query_engine.cpp
src/text_processor/: CMakeLists.txt  text_processor.cpp  text_processor.h
